Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/QualifiedAccess/QualifiedAccess_4.out
QualifiedAccess_4.java:17:28: compiler.err.expected: '('
1 error
